Correction css horizontal align with flexbox + html sementic

--- a/main/style.scss
+++ b/main/style.scss
@@ -18,6 +18,7 @@ body {
   font-family: Outfit;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   min-height: 100vh;
 }
 
@@ -25,7 +26,11 @@ body {
   width: $card-size;
   height: 475px;
   background: white;
-  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
   padding: 5px 5px 5px 5px;
   border-radius: 15px;
   box-shadow: 1px 1px 15px 1px hsl(212, 45%, 89%);
@@ -43,8 +48,12 @@ body {
 
 .text {
   font-weight: 700;
-  padding: 20px;
+  padding: 20px 20px 0px 20px;
   text-align: center;
+}
+
+h1 {
+  margin-bottom: 0;
   font-size: 20px;
 }
 
@@ -52,5 +61,6 @@ body {
   padding: 0px 20px 20px 20px;
   text-align: center;
   font-weight: 400;
-  color: darken(hsl(212, 45%, 89%), 10%);
+  color: darken(hsl(212, 45%, 89%), 30%);
+  font-size: 15px;
 }
